[package]
name = "oko"
version = "0.1.0"
edition = "2021"
authors = ["Ilya Druzhinin <ilya.druzh@gmail.com>"]
repository = "https://github.com/ilyadruzh/oko"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }  # для асинхронной среды выполнения
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
curl = "0.4.46"
web3 = "0.19.0"